--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,7 @@
               <a
                 class="relative inline-flex items-center justify-center gap-2 px-8 py-3.5 overflow-hidden text-sm font-bold tracking-wider text-white bg-slate-900 dark:bg-white dark:text-slate-900 rounded-full group cursor-pointer shadow-xl hover:shadow-[0_0_20px_rgba(184,134,11,0.4)] transition-all duration-300 border border-primary/30"
                 download="Zailesh_resume.pdf"
-                href="Zailesh_resume.pdf"
+                href="Zailesh_Resume.pdf"
               >
                 <span
                   class="absolute inset-0 w-full h-full bg-gradient-to-br from-primary via-yellow-600 to-yellow-700 opacity-90 group-hover:opacity-100 transition-opacity duration-300"
@@ -1696,6 +1696,186 @@
                     >arrow_forward</span
                   >
                 </div>
+              </div>
+            </div>
+          </a>
+          <a
+            class="group project-card glass-card rounded-2xl overflow-hidden relative md:col-span-2 flex flex-col md:flex-row reveal-item reveal-hidden delay-500"
+            href="Telescopic_Amplifier_Report.pdf"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <div
+              class="absolute inset-0 bg-gradient-to-r from-indigo-900/10 via-slate-900/5 to-indigo-900/10 dark:from-white/5 dark:via-indigo-500/5 dark:to-white/5 pointer-events-none transition-opacity duration-700 group-hover:opacity-100 opacity-60"
+            ></div>
+            <div
+              class="absolute inset-0 overflow-hidden opacity-10 pointer-events-none group-hover:opacity-20 transition-opacity duration-700"
+            >
+              <svg
+                class="w-full h-full"
+                preserveAspectRatio="none"
+                viewBox="0 0 800 400"
+              >
+                <path
+                  class="text-indigo-400 dark:text-indigo-300 animate-sine-wave opacity-50"
+                  d="M0 200 Q 100 100, 200 200 T 400 200 T 600 200 T 800 200"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                ></path>
+                <path
+                  class="text-primary dark:text-primary animate-sine-wave opacity-50"
+                  d="M0 200 Q 100 300, 200 200 T 400 200 T 600 200 T 800 200"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  style="animation-delay: -2s"
+                ></path>
+                <defs>
+                  <pattern
+                    height="40"
+                    id="grid-pattern-amp"
+                    patternUnits="userSpaceOnUse"
+                    width="40"
+                  >
+                    <path
+                      class="text-slate-400/30"
+                      d="M 40 0 L 0 0 0 40"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="0.5"
+                    ></path>
+                  </pattern>
+                </defs>
+                <rect
+                  fill="url(#grid-pattern-amp)"
+                  height="100%"
+                  width="100%"
+                ></rect>
+              </svg>
+            </div>
+            <div
+              class="p-8 md:w-3/5 flex flex-col justify-center relative z-10"
+            >
+              <div class="flex justify-between items-start mb-4">
+                <div
+                  class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-indigo-500/10 text-indigo-600 dark:text-indigo-400 text-[10px] font-bold uppercase tracking-wider border border-indigo-500/20 backdrop-blur-sm shadow-sm group-hover:shadow-[0_0_10px_rgba(99,102,241,0.4)] transition-shadow"
+                >
+                  <span class="material-symbols-outlined text-sm">waves</span>
+                  Analog IC
+                </div>
+                <div
+                  class="text-xs font-mono text-slate-400 dark:text-slate-500 opacity-60 group-hover:opacity-100 transition-opacity"
+                >
+                  ANLG-03
+                </div>
+              </div>
+              <h3
+                class="text-3xl font-display font-bold text-slate-900 dark:text-white mb-4 group-hover:text-indigo-500 transition-colors duration-300"
+              >
+                Telescopic CMOS Operational Amplifier
+              </h3>
+              <p
+                class="text-slate-600 dark:text-slate-300 text-sm leading-relaxed mb-6"
+              >
+                Designed a high-gain telescopic CMOS operational amplifier with enhanced swing and stability. Optimized biasing networks and transistor sizing (W/L) through analytical modeling in Cadence Virtuoso to achieve superior gain-bandwidth product and phase margin performance.
+              </p>
+              <div class="flex flex-wrap gap-2 mb-4">
+                <span
+                  class="px-2 py-1 text-xs font-mono border border-indigo-500/30 rounded bg-indigo-500/5 text-indigo-600 dark:text-indigo-400 group-hover:bg-indigo-500 group-hover:text-white transition-all"
+                  >Cadence Virtuoso</span
+                >
+                <span
+                  class="px-2 py-1 text-xs font-mono border border-slate-200 dark:border-slate-700 rounded text-slate-500 group-hover:border-indigo-500/50"
+                  >Spectre</span
+                >
+                <span
+                  class="px-2 py-1 text-xs font-mono border border-slate-200 dark:border-slate-700 rounded text-slate-500 group-hover:border-indigo-500/50"
+                  >ADE L</span
+                >
+                <span
+                  class="px-2 py-1 text-xs font-mono border border-slate-200 dark:border-slate-700 rounded text-slate-500 group-hover:border-indigo-500/50"
+                  >180nm CMOS</span
+                >
+              </div>
+            </div>
+            <div
+              class="md:w-2/5 bg-gradient-to-br from-indigo-500/5 to-transparent p-8 flex items-center justify-center relative overflow-hidden group-hover:from-indigo-500/10 transition-all duration-500"
+            >
+              <div
+                class="relative w-40 h-32 flex items-center justify-center group-hover:scale-105 transition-transform duration-500"
+              >
+                <svg class="w-full h-full drop-shadow-lg" viewBox="0 0 100 100">
+                  <!-- Operational Amplifier Symbol -->
+                  <path
+                    class="text-indigo-500 dark:text-indigo-400"
+                    d="M20 10 L80 50 L20 90 Z"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                  ></path>
+                  <!-- Inverting input (bottom) -->
+                  <line
+                    class="text-slate-400 group-hover:text-indigo-400 transition-colors"
+                    stroke="currentColor"
+                    stroke-width="1.5"
+                    x1="0"
+                    x2="20"
+                    y1="70"
+                    y2="70"
+                  ></line>
+                  <text
+                    class="text-slate-500 font-mono text-xs"
+                    fill="currentColor"
+                    x="8"
+                    y="74"
+                  >
+                    −
+                  </text>
+                  <!-- Non-inverting input (top) -->
+                  <line
+                    class="text-slate-400 group-hover:text-indigo-400 transition-colors"
+                    stroke="currentColor"
+                    stroke-width="1.5"
+                    x1="0"
+                    x2="20"
+                    y1="30"
+                    y2="30"
+                  ></line>
+                  <text
+                    class="text-slate-500 font-mono text-xs"
+                    fill="currentColor"
+                    x="8"
+                    y="34"
+                  >
+                    +
+                  </text>
+                  <!-- Output -->
+                  <line
+                    class="text-primary group-hover:text-primary/80 transition-colors"
+                    stroke="currentColor"
+                    stroke-width="1.5"
+                    x1="80"
+                    x2="100"
+                    y1="50"
+                    y2="50"
+                  ></line>
+                  <!-- Active signal indicator -->
+                  <circle
+                    class="text-primary fill-current animate-pulse"
+                    cx="40"
+                    cy="50"
+                    r="2"
+                  ></circle>
+                  <!-- Gain path visualization -->
+                  <path
+                    class="text-indigo-300 opacity-40 animate-pulse"
+                    d="M40 50 L70 50"
+                    stroke="currentColor"
+                    stroke-dasharray="3 3"
+                    stroke-width="1"
+                  ></path>
+                </svg>
               </div>
             </div>
           </a>
