--- a/index.html
+++ b/index.html
@@ -1940,8 +1940,108 @@
               </div>
             </div>
           </a>
+          <!-- FinFET/GAFET TCAD Project -->
           <a
-            class="group project-card glass-card rounded-2xl overflow-hidden relative md:col-span-2 flex flex-col md:flex-row reveal-item reveal-hidden delay-600"
+            class="group project-card glass-card rounded-2xl overflow-hidden relative reveal-item reveal-hidden delay-600"
+            href="finfet-gafet.html"
+          >
+            <div class="absolute bottom-4 right-40 z-20 px-3 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(167,139,250,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2 group-hover:scale-105">
+              <span class="material-symbols-outlined text-violet-600 dark:text-violet-400" style="font-variation-settings: 'FILL' 0">arrow_outward</span>
+              <span class="text-xs font-medium text-violet-600 dark:text-violet-400">Learn More</span>
+            </div>
+            <button onclick="event.preventDefault(); event.stopPropagation(); window.open('Fin-FET_GAAFET_TCAD.pdf', '_blank');" class="absolute bottom-4 right-4 z-20 px-4 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(167,139,250,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2">
+              <span class="material-symbols-outlined text-violet-600 dark:text-violet-400 text-lg" style="font-variation-settings: 'FILL' 0">file_download</span>
+              <span class="text-sm font-medium text-violet-600 dark:text-violet-400">View Report</span>
+            </button>
+            <div class="p-6 pb-24 relative z-10">
+              <div class="flex justify-between items-start mb-3">
+                <div class="inline-flex items-center gap-2 px-2 py-1 rounded-full bg-violet-500/10 text-violet-600 dark:text-violet-400 text-[10px] font-bold uppercase tracking-wider border border-violet-500/20">
+                  <span class="material-symbols-outlined text-sm">settings</span>
+                  TCAD
+                </div>
+                <div class="text-xs font-mono text-slate-400 dark:text-slate-500">TCAD-01</div>
+              </div>
+              <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-2 group-hover:text-violet-500 transition-colors">FinFET/GAFET Simulation<br><span class="text-sm font-semibold text-violet-600 dark:text-violet-400">Analysis using Sentaurus TCAD</span></h3>
+              <p class="text-slate-600 dark:text-slate-400 text-xs leading-relaxed">Advanced 3D TCAD simulation of FinFET and GAFET devices at 3-5nm technology nodes with comprehensive analysis of gate architecture, carrier transport, and performance metrics.</p>
+            </div>
+          </a>
+          <!-- MOSFET TCAD Project -->
+          <a
+            class="group project-card glass-card rounded-2xl overflow-hidden relative reveal-item reveal-hidden delay-700"
+            href="mosfet-tcad.html"
+          >
+            <div class="absolute bottom-4 right-40 z-20 px-3 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(249,115,22,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2 group-hover:scale-105">
+              <span class="material-symbols-outlined text-orange-600 dark:text-orange-400" style="font-variation-settings: 'FILL' 0">arrow_outward</span>
+              <span class="text-xs font-medium text-orange-600 dark:text-orange-400">Learn More</span>
+            </div>
+            <button onclick="event.preventDefault(); event.stopPropagation(); window.open('MOSFET_TCAD.pdf', '_blank');" class="absolute bottom-4 right-4 z-20 px-4 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(249,115,22,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2">
+              <span class="material-symbols-outlined text-orange-600 dark:text-orange-400 text-lg" style="font-variation-settings: 'FILL' 0">file_download</span>
+              <span class="text-sm font-medium text-orange-600 dark:text-orange-400">View Report</span>
+            </button>
+            <div class="p-6 pb-24 relative z-10">
+              <div class="flex justify-between items-start mb-3">
+                <div class="inline-flex items-center gap-2 px-2 py-1 rounded-full bg-orange-500/10 text-orange-600 dark:text-orange-400 text-[10px] font-bold uppercase tracking-wider border border-orange-500/20">
+                  <span class="material-symbols-outlined text-sm">settings</span>
+                  TCAD
+                </div>
+                <div class="text-xs font-mono text-slate-400 dark:text-slate-500">TCAD-02</div>
+              </div>
+              <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-2 group-hover:text-orange-500 transition-colors">MOSFET Characterization<br><span class="text-sm font-semibold text-orange-600 dark:text-orange-400">Analysis using Sentaurus TCAD</span></h3>
+              <p class="text-slate-600 dark:text-slate-400 text-xs leading-relaxed">Comprehensive DC and transient TCAD simulation of nMOS and pMOS devices across technology nodes with full physics analysis including short-channel effects and leakage mechanisms.</p>
+            </div>
+          </a>
+          <!-- MOSCAP TCAD Project -->
+          <a
+            class="group project-card glass-card rounded-2xl overflow-hidden relative reveal-item reveal-hidden delay-700"
+            href="moscap-tcad.html"
+          >
+            <div class="absolute bottom-4 right-40 z-20 px-3 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(139,92,246,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2 group-hover:scale-105">
+              <span class="material-symbols-outlined text-purple-600 dark:text-purple-400" style="font-variation-settings: 'FILL' 0">arrow_outward</span>
+              <span class="text-xs font-medium text-purple-600 dark:text-purple-400">Learn More</span>
+            </div>
+            <button onclick="event.preventDefault(); event.stopPropagation(); window.open('MOSCAP_TCAD.pdf', '_blank');" class="absolute bottom-4 right-4 z-20 px-4 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(139,92,246,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2">
+              <span class="material-symbols-outlined text-purple-600 dark:text-purple-400 text-lg" style="font-variation-settings: 'FILL' 0">file_download</span>
+              <span class="text-sm font-medium text-purple-600 dark:text-purple-400">View Report</span>
+            </button>
+            <div class="p-6 pb-24 relative z-10">
+              <div class="flex justify-between items-start mb-3">
+                <div class="inline-flex items-center gap-2 px-2 py-1 rounded-full bg-purple-500/10 text-purple-600 dark:text-purple-400 text-[10px] font-bold uppercase tracking-wider border border-purple-500/20">
+                  <span class="material-symbols-outlined text-sm">settings</span>
+                  TCAD
+                </div>
+                <div class="text-xs font-mono text-slate-400 dark:text-slate-500">TCAD-03</div>
+              </div>
+              <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-2 group-hover:text-purple-500 transition-colors">MOSCAP Analysis<br><span class="text-sm font-semibold text-purple-600 dark:text-purple-400">Analysis using Sentaurus TCAD</span></h3>
+              <p class="text-slate-600 dark:text-slate-400 text-xs leading-relaxed">Detailed TCAD analysis of Metal-Oxide-Semiconductor capacitor structures with C-V characterization, interface defect extraction, and oxide quality assessment across operating regions.</p>
+            </div>
+          </a>
+          <!-- PN Junction TCAD Project -->
+          <a
+            class="group project-card glass-card rounded-2xl overflow-hidden relative reveal-item reveal-hidden delay-800"
+            href="pn-junction-tcad.html"
+          >
+            <div class="absolute bottom-4 right-40 z-20 px-3 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(8,145,178,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2 group-hover:scale-105">
+              <span class="material-symbols-outlined text-cyan-600 dark:text-cyan-400" style="font-variation-settings: 'FILL' 0">arrow_outward</span>
+              <span class="text-xs font-medium text-cyan-600 dark:text-cyan-400">Learn More</span>
+            </div>
+            <button onclick="event.preventDefault(); event.stopPropagation(); window.open('PN_Junction_Diode_TCAD.pdf', '_blank');" class="absolute bottom-4 right-4 z-20 px-4 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(8,145,178,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2">
+              <span class="material-symbols-outlined text-cyan-600 dark:text-cyan-400 text-lg" style="font-variation-settings: 'FILL' 0">file_download</span>
+              <span class="text-sm font-medium text-cyan-600 dark:text-cyan-400">View Report</span>
+            </button>
+            <div class="p-6 pb-24 relative z-10">
+              <div class="flex justify-between items-start mb-3">
+                <div class="inline-flex items-center gap-2 px-2 py-1 rounded-full bg-cyan-500/10 text-cyan-600 dark:text-cyan-400 text-[10px] font-bold uppercase tracking-wider border border-cyan-500/20">
+                  <span class="material-symbols-outlined text-sm">settings</span>
+                  TCAD
+                </div>
+                <div class="text-xs font-mono text-slate-400 dark:text-slate-500">TCAD-04</div>
+              </div>
+              <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-2 group-hover:text-cyan-500 transition-colors">PN Junction Diode<br><span class="text-sm font-semibold text-cyan-600 dark:text-cyan-400">Analysis using Sentaurus TCAD</span></h3>
+              <p class="text-slate-600 dark:text-slate-400 text-xs leading-relaxed">Complete TCAD simulation of PN junction diodes with I-V characterization, temperature effects, and analysis of carrier transport mechanisms including generation-recombination and breakdown.</p>
+            </div>
+          </a>
+          <a
+            class="group project-card glass-card rounded-2xl overflow-hidden relative md:col-span-2 flex flex-col md:flex-row reveal-item reveal-hidden delay-800"
             href="project-iot-automation.html"
             target="_blank"
             rel="noopener noreferrer"
