Analog Projects Update

--- a/index.html
+++ b/index.html
@@ -1308,6 +1308,37 @@
             <span
               class="absolute -left-[9px] top-8 h-4 w-4 rounded-full bg-white dark:bg-slate-900 border-4 border-primary z-10 group-hover:scale-150 transition-transform duration-300 shadow-[0_0_15px_rgba(184,134,11,0.5)]"
             ></span>
+            <div class="glass-card hover-elevate p-8 rounded-2xl">
+              <div
+                class="flex flex-col sm:flex-row sm:items-center justify-between mb-4"
+              >
+                <h3 class="text-xl font-bold text-slate-900 dark:text-white">
+                  M.Tech VLSI Design
+                </h3>
+                <span
+                  class="text-xs font-mono font-bold text-primary bg-primary/10 px-3 py-1 rounded-full border border-primary/20 shadow-sm"
+                  >Ongoing</span
+                >
+              </div>
+              <div
+                class="text-lg font-medium text-slate-700 dark:text-slate-300 mb-2"
+              >
+                Vellore Institute of Technology (VIT)
+              </div>
+              <p
+                class="text-slate-600 dark:text-slate-400 text-sm leading-relaxed"
+              >
+                Specializing in advanced Digital and Analog IC design, low-power
+                architectures, and verification methodologies.
+              </p>
+            </div>
+          </div>
+          <div
+            class="relative pl-8 md:pl-16 group reveal-item reveal-hidden delay-200"
+          >
+            <span
+              class="absolute -left-[9px] top-8 h-4 w-4 rounded-full bg-white dark:bg-slate-900 border-4 border-slate-300 dark:border-slate-600 z-10 group-hover:border-primary group-hover:scale-125 transition-all duration-300"
+            ></span>
             <div
               class="glass-card hover-elevate p-8 rounded-2xl relative overflow-hidden"
             >
@@ -1322,14 +1353,14 @@
                     Embedded Engineer
                   </h3>
                   <span
-                    class="text-xs font-mono font-bold text-primary bg-primary/10 px-3 py-1 rounded-full border border-primary/20 shadow-sm"
+                    class="text-xs font-mono font-bold text-slate-500 group-hover:text-primary transition-colors"
                     >1 Year</span
                   >
                 </div>
                 <div
                   class="text-lg font-medium text-slate-700 dark:text-slate-300 mb-4 flex items-center gap-2"
                 >
-                  <span class="material-symbols-outlined text-primary text-sm"
+                  <span class="material-symbols-outlined text-slate-500 text-sm"
                     >business_center</span
                   >
                   STEM CADETS Pvt. Ltd.
@@ -1353,37 +1384,6 @@
                   >
                 </div>
               </div>
-            </div>
-          </div>
-          <div
-            class="relative pl-8 md:pl-16 group reveal-item reveal-hidden delay-200"
-          >
-            <span
-              class="absolute -left-[9px] top-8 h-4 w-4 rounded-full bg-white dark:bg-slate-900 border-4 border-slate-300 dark:border-slate-600 z-10 group-hover:border-primary group-hover:scale-125 transition-all duration-300"
-            ></span>
-            <div class="glass-card hover-elevate p-8 rounded-2xl">
-              <div
-                class="flex flex-col sm:flex-row sm:items-center justify-between mb-4"
-              >
-                <h3 class="text-xl font-bold text-slate-900 dark:text-white">
-                  M.Tech VLSI Design
-                </h3>
-                <span
-                  class="text-xs font-mono font-bold text-slate-500 group-hover:text-primary transition-colors"
-                  >Ongoing</span
-                >
-              </div>
-              <div
-                class="text-lg font-medium text-slate-700 dark:text-slate-300 mb-2"
-              >
-                Vellore Institute of Technology (VIT)
-              </div>
-              <p
-                class="text-slate-600 dark:text-slate-400 text-sm leading-relaxed"
-              >
-                Specializing in advanced Digital and Analog IC design, low-power
-                architectures, and verification methodologies.
-              </p>
             </div>
           </div>
           <div
@@ -1944,6 +1944,8 @@
           <a
             class="group project-card glass-card rounded-2xl overflow-hidden relative reveal-item reveal-hidden delay-600"
             href="finfet-gafet.html"
+            target="_blank"
+            rel="noopener noreferrer"
           >
             <div class="absolute bottom-4 right-40 z-20 px-3 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(167,139,250,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2 group-hover:scale-105">
               <span class="material-symbols-outlined text-violet-600 dark:text-violet-400" style="font-variation-settings: 'FILL' 0">arrow_outward</span>
@@ -1961,7 +1963,7 @@
                 </div>
                 <div class="text-xs font-mono text-slate-400 dark:text-slate-500">TCAD-01</div>
               </div>
-              <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-2 group-hover:text-violet-500 transition-colors">FinFET/GAFET Simulation<br><span class="text-sm font-semibold text-violet-600 dark:text-violet-400">Analysis using Sentaurus TCAD</span></h3>
+              <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-2 group-hover:text-violet-500 transition-colors">FinFET/GAFET Simulation<br><span class="text-base font-bold text-violet-600 dark:text-violet-400">Sentaurus TCAD</span></h3>
               <p class="text-slate-600 dark:text-slate-400 text-xs leading-relaxed">Advanced 3D TCAD simulation of FinFET and GAFET devices at 3-5nm technology nodes with comprehensive analysis of gate architecture, carrier transport, and performance metrics.</p>
             </div>
           </a>
@@ -1969,6 +1971,8 @@
           <a
             class="group project-card glass-card rounded-2xl overflow-hidden relative reveal-item reveal-hidden delay-700"
             href="mosfet-tcad.html"
+            target="_blank"
+            rel="noopener noreferrer"
           >
             <div class="absolute bottom-4 right-40 z-20 px-3 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(249,115,22,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2 group-hover:scale-105">
               <span class="material-symbols-outlined text-orange-600 dark:text-orange-400" style="font-variation-settings: 'FILL' 0">arrow_outward</span>
@@ -1986,14 +1990,70 @@
                 </div>
                 <div class="text-xs font-mono text-slate-400 dark:text-slate-500">TCAD-02</div>
               </div>
-              <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-2 group-hover:text-orange-500 transition-colors">MOSFET Characterization<br><span class="text-sm font-semibold text-orange-600 dark:text-orange-400">Analysis using Sentaurus TCAD</span></h3>
+              <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-2 group-hover:text-orange-500 transition-colors">MOSFET Characterization<br><span class="text-base font-bold text-orange-600 dark:text-orange-400">Sentaurus TCAD</span></h3>
               <p class="text-slate-600 dark:text-slate-400 text-xs leading-relaxed">Comprehensive DC and transient TCAD simulation of nMOS and pMOS devices across technology nodes with full physics analysis including short-channel effects and leakage mechanisms.</p>
+            </div>
+          </a>
+          <!-- Cascode Amplifier Project -->
+          <a
+            class="group project-card glass-card rounded-2xl overflow-hidden relative reveal-item reveal-hidden delay-700"
+            href="project-cascode-amplifier.html"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <div class="absolute bottom-4 right-40 z-20 px-3 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(236,72,153,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2 group-hover:scale-105">
+              <span class="material-symbols-outlined text-pink-600 dark:text-pink-400" style="font-variation-settings: 'FILL' 0">arrow_outward</span>
+              <span class="text-xs font-medium text-pink-600 dark:text-pink-400">Learn More</span>
+            </div>
+            <button onclick="event.preventDefault(); event.stopPropagation(); window.open('Analog_CASCODE_AMPLIFIER_Final_Report.pdf', '_blank');" class="absolute bottom-4 right-4 z-20 px-4 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(236,72,153,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2">
+              <span class="material-symbols-outlined text-pink-600 dark:text-pink-400 text-lg" style="font-variation-settings: 'FILL' 0">file_download</span>
+              <span class="text-sm font-medium text-pink-600 dark:text-pink-400">View Report</span>
+            </button>
+            <div class="p-6 pb-24 relative z-10">
+              <div class="flex justify-between items-start mb-3">
+                <div class="inline-flex items-center gap-2 px-2 py-1 rounded-full bg-pink-500/10 text-pink-600 dark:text-pink-400 text-[10px] font-bold uppercase tracking-wider border border-pink-500/20">
+                  <span class="material-symbols-outlined text-sm">science</span>
+                  Analog
+                </div>
+                <div class="text-xs font-mono text-slate-400 dark:text-slate-500">ANLG-01</div>
+              </div>
+              <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-2 group-hover:text-pink-500 transition-colors">Cascode CMOS Amplifier Analysis<br><span class="text-sm font-semibold text-pink-600 dark:text-pink-400">gm/ID & PDM Methodology</span></h3>
+              <p class="text-slate-600 dark:text-slate-400 text-xs leading-relaxed">High-gain, high-bandwidth amplifier utilizing cascoded MOSFET stages optimized through gm/ID and PDM methodologies for superior output impedance and enhanced frequency response characteristics.</p>
+            </div>
+          </a>
+          <!-- Two-Stage Op-Amp Project -->
+          <a
+            class="group project-card glass-card rounded-2xl overflow-hidden relative reveal-item reveal-hidden delay-800"
+            href="project-opamp-two-stage.html"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <div class="absolute bottom-4 right-40 z-20 px-3 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(16,185,129,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2 group-hover:scale-105">
+              <span class="material-symbols-outlined text-emerald-600 dark:text-emerald-400" style="font-variation-settings: 'FILL' 0">arrow_outward</span>
+              <span class="text-xs font-medium text-emerald-600 dark:text-emerald-400">Learn More</span>
+            </div>
+            <button onclick="event.preventDefault(); event.stopPropagation(); window.open('Analog_TWO_STAGE_OPAMP_Final_Report.pdf', '_blank');" class="absolute bottom-4 right-4 z-20 px-4 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(16,185,129,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2">
+              <span class="material-symbols-outlined text-emerald-600 dark:text-emerald-400 text-lg" style="font-variation-settings: 'FILL' 0">file_download</span>
+              <span class="text-sm font-medium text-emerald-600 dark:text-emerald-400">View Report</span>
+            </button>
+            <div class="p-6 pb-24 relative z-10">
+              <div class="flex justify-between items-start mb-3">
+                <div class="inline-flex items-center gap-2 px-2 py-1 rounded-full bg-emerald-500/10 text-emerald-600 dark:text-emerald-400 text-[10px] font-bold uppercase tracking-wider border border-emerald-500/20">
+                  <span class="material-symbols-outlined text-sm">science</span>
+                  Analog
+                </div>
+                <div class="text-xs font-mono text-slate-400 dark:text-slate-500">ANLG-02</div>
+              </div>
+              <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-2 group-hover:text-emerald-500 transition-colors">Two-Stage Op-Amp<br><span class="text-sm font-semibold text-emerald-600 dark:text-emerald-400">180nm CMOS Implementation</span></h3>
+              <p class="text-slate-600 dark:text-slate-400 text-xs leading-relaxed">Miller-compensated operational amplifier designed for high open-loop gain (60dB), wide bandwidth (30MHz), and stable operation with comprehensive frequency compensation and pole-zero analysis techniques.</p>
             </div>
           </a>
           <!-- MOSCAP TCAD Project -->
           <a
             class="group project-card glass-card rounded-2xl overflow-hidden relative reveal-item reveal-hidden delay-700"
             href="moscap-tcad.html"
+            target="_blank"
+            rel="noopener noreferrer"
           >
             <div class="absolute bottom-4 right-40 z-20 px-3 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(139,92,246,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2 group-hover:scale-105">
               <span class="material-symbols-outlined text-purple-600 dark:text-purple-400" style="font-variation-settings: 'FILL' 0">arrow_outward</span>
@@ -2011,7 +2071,7 @@
                 </div>
                 <div class="text-xs font-mono text-slate-400 dark:text-slate-500">TCAD-03</div>
               </div>
-              <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-2 group-hover:text-purple-500 transition-colors">MOSCAP Analysis<br><span class="text-sm font-semibold text-purple-600 dark:text-purple-400">Analysis using Sentaurus TCAD</span></h3>
+              <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-2 group-hover:text-purple-500 transition-colors">MOSCAP Analysis<br><span class="text-base font-bold text-purple-600 dark:text-purple-400">Sentaurus TCAD</span></h3>
               <p class="text-slate-600 dark:text-slate-400 text-xs leading-relaxed">Detailed TCAD analysis of Metal-Oxide-Semiconductor capacitor structures with C-V characterization, interface defect extraction, and oxide quality assessment across operating regions.</p>
             </div>
           </a>
@@ -2019,6 +2079,8 @@
           <a
             class="group project-card glass-card rounded-2xl overflow-hidden relative reveal-item reveal-hidden delay-800"
             href="pn-junction-tcad.html"
+            target="_blank"
+            rel="noopener noreferrer"
           >
             <div class="absolute bottom-4 right-40 z-20 px-3 py-2 rounded-lg bg-white/10 dark:bg-white/5 hover:bg-white/20 dark:hover:bg-white/15 backdrop-blur-sm hover:shadow-[0_0_15px_rgba(8,145,178,0.4)] transition-all duration-300 pointer-events-auto flex items-center gap-2 group-hover:scale-105">
               <span class="material-symbols-outlined text-cyan-600 dark:text-cyan-400" style="font-variation-settings: 'FILL' 0">arrow_outward</span>
@@ -2036,7 +2098,7 @@
                 </div>
                 <div class="text-xs font-mono text-slate-400 dark:text-slate-500">TCAD-04</div>
               </div>
-              <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-2 group-hover:text-cyan-500 transition-colors">PN Junction Diode<br><span class="text-sm font-semibold text-cyan-600 dark:text-cyan-400">Analysis using Sentaurus TCAD</span></h3>
+              <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-2 group-hover:text-cyan-500 transition-colors">PN Junction Diode<br><span class="text-base font-bold text-cyan-600 dark:text-cyan-400">Sentaurus TCAD</span></h3>
               <p class="text-slate-600 dark:text-slate-400 text-xs leading-relaxed">Complete TCAD simulation of PN junction diodes with I-V characterization, temperature effects, and analysis of carrier transport mechanisms including generation-recombination and breakdown.</p>
             </div>
           </a>
