--- a/index.html
+++ b/index.html
@@ -998,15 +998,15 @@
   <strong
     class="text-slate-900 dark:text-white decoration-primary/40 underline underline-offset-4 decoration-2 hover:text-primary transition-colors"
     >Zailesh A R</strong
-  >, an M.Tech student in VLSI Design with a strong focus on integrated circuit development. I specialize in
+  >, an M.Tech student in VLSI Design with a strong focus on integrated circuit development. I am interested in
   <span
     class="text-primary font-semibold hover:underline cursor-default"
     >Low Power Design</span
   >,
   <span
     class="text-primary font-semibold hover:underline cursor-default"
-    >Digital &amp; Analog IC Design</span
-  >, and design verification using industry-standard EDA tools, with hands-on experience in RTL design, synthesis, timing analysis, and custom CMOS design.
+    >Digital IC Design &amp; ASIC Design</span
+  > using industry-standard EDA tools, with hands-on experience in RTL design, synthesis, timing analysis, and custom CMOS design.
 </p>
 
 
